crates/reef-tui/tests/snapshots/ui_snapshots__empty_repo.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
assertion_line: 104
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   +   ⊟             │
 (empty)               │
                       │
                       │
                       │
                       │
                       │
                       │
                       │                  Select a file to preview
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
 SSH           ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
