crates/reef-tui/tests/snapshots/ui_snapshots__find_widget_on_preview.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
assertion_line: 737
expression: output
---
 reef  [TMPDIR]  ⎇ master
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph                            ⊟  1:Files 2:Search 3:Git 4:Graph
 + New File   + New Folder   │ scra
   scratch.txt               │ ────  bar                          Aa  ab  .*     1/2     ↑  ↓  ×
                             │
                             │     2     bar();
                             │     3     bar();
                             │     4 }
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
 SSH                             ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Preview]
